Modalidad Concesiones con descargo y sin descargo completado

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_26.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_26.cshtml
@@ -18,7 +18,7 @@
                 <i>“Talar, extraer y/o aprovechar recursos forestales sin autorización en su condición o no de titular del título habilitante, a excepción de los aprovechados por subsistencia”</i>
             </td>
             <td style="border: 1px solid #000;">
-                ${infraccion.detalle || 'XX'}
+                Utilizar  Guías de Transporte Forestal otorgada por la ARFFS para amparar el transporte de recursos forestales provenientes de una extracción no autorizada
             </td>
             <td style="border: 1px solid #000; text-align: center;">
                 Escrito xxxxxxx SITD xxxxxxxxx
@@ -65,15 +65,25 @@
 <p class="enumeration">
     En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
+{{else}}
+<p class="enumeration">
+    Es preciso mencionar que, respecto de la imputación realizada, el/la administrado no presentó descargo a la Resolución Sub Directoral.
+</p>
+<p class="enumeration">
+    La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida al/la administrado (a); respecto de lo cual el/la administrado (a) <u>no presentó descargos a lo señalado en el Informe Final de Instrucción.</u>
+</p>
+<p class="enumeration">
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
+</p>
+{{/if}}
 <ul>
     <li>
-        Existe un volumen de xxx m3 de madera movilizado, conformado por las especies Cedrelinga catenaeformis “tornillo” (92.535 m3), Otoba parvifolia “aguano cumala” (422.556 m3) que proviene de individuos no autorizados; por lo que el/la administrado (a) hizo uso de Guías de Transporte Forestal y documentación de su título habilitante para transportar dicho volumen; es decir, dio apariencia de legalidad a dichos productos.
+        Existe un volumen de xxx m<sup>3</sup> de madera movilizado, conformado por las especies XXXX (XX m<sup>3</sup>), XXXX (XX m<sup>3</sup>) que proviene de individuos no autorizados; por lo que el/la administrado (a) hizo uso de Guías de Transporte Forestal y documentación de su título habilitante para transportar dicho volumen; es decir, dio apariencia de legalidad a dichos productos.
     </li>
     <li>
         El/la administrado (a) es la responsable por el uso de las GTF conforme a lo dispuesto en el artículo 4 de la Resolución de Dirección Ejecutiva N° 122-2015-SERFOR-DE.
     </li>
 </ul>
-{{/if}}
 
 <p class="enumeration">
     En ese contexto, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 26 del Anexo 1 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
