--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_29.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_29.cshtml
@@ -18,7 +18,7 @@
                 <i>“Talar, extraer y/o aprovechar recursos forestales sin autorización en su condición o no de titular del título habilitante, a excepción de los aprovechados por subsistencia”</i>
             </td>
             <td style="border: 1px solid #000;">
-                ${infraccion.detalle || 'XX'}
+                Se imputó contra el/la Titular el no contar con regente para la implementación del plan de manejo
             </td>
             <td style="border: 1px solid #000; text-align: center;">
                 Escrito xxxxxxx SITD xxxxxxxxx
@@ -65,6 +65,17 @@
 <p class="enumeration">
     En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
+{{else}}
+<p class="enumeration">
+    Es preciso mencionar que, respecto de la imputación realizada, el/la administrado no presentó descargo a la Resolución Sub Directoral.
+</p>
+<p class="enumeration">
+    La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida al/la administrado (a); respecto de lo cual el/la administrado (a) <u>no presentó descargos a lo señalado en el Informe Final de Instrucción.</u>
+</p>
+<p class="enumeration">
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
+</p>
+{{/if}}
 <ul>
     <li>
         Con fecha xxx, el/la administrado (a) y el Ing. XX suscribieron el Contrato de Regencia Forestal, el cual solo considera los servicios del Regente Forestal para la elaboración del PMFI, tal como se observa a continuación:
@@ -82,14 +93,13 @@
     </li>
 </ul>
 <p style="text-align: center;">
-    <strong>Gráfico 01.</strong> Línea de tiempo    
+    <strong>Gráfico 01.</strong> Línea de tiempo
 </p>
 <ul>
     <li>
         En efecto, el/la administrado (a) implementó el Plan de Manejo Forestal xxx, sin embargo, no contó con regente forestal entre las fechas xx de xxx de xx al xx de xxx de xxx, fechas en las que efectúo aprovechamiento forestal.
     </li>
 </ul>
-{{/if}}
 
 <p class="enumeration">
     En ese contexto, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 29 del Anexo 1 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
