--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_32.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_32.cshtml
@@ -65,6 +65,17 @@
 <p class="enumeration">
     En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
+{{else}}
+<p class="enumeration">
+    Es preciso mencionar que, respecto de la imputación realizada, el/la administrado no presentó descargo a la Resolución Sub Directoral.
+</p>
+<p class="enumeration">
+    La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida al/la administrado (a); respecto de lo cual el/la administrado (a) <u>no presentó descargos a lo señalado en el Informe Final de Instrucción.</u>
+</p>
+<p class="enumeration">
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
+</p>
+{{/if}}
 <ul>
     <li>
         Mediante la Resolución Jefatural N° xxxx de fecha xxx, la ARFFS aprobó el xxx, en la cual se establece que el aprovechamiento se realizará de conformidad con los datos (vértices de ubicación en coordenadas UTM, especie y volumen) señalados en el plan de manejo aprobado.
@@ -85,7 +96,6 @@
         En consecuencia, al haberse determinado que xxx individuos (xxx aprovechables y xx semilleros) declarados no existen en campo y que no se evidenciaron actividades de aprovechamiento en campo, se ha configurado la infracción consistente en elaborar, formular, suscribir, presentar o remitir documentos con información adulterada, falsa o incompleta contenida en documentos físicos o medios informáticos, en este caso, la información falsa contenida en el informe de ejecución que fue presentado por la administrada a la (precisar ARFFS y/o OSINFOR), a través del escrito xxxx. de fecha xxxxx, con registro N° xxxx.
     </li>
 </ul>
-{{/if}}
 
 <p class="enumeration">
     En ese contexto, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 32 del Anexo 1 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
