--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_e.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_e.cshtml
@@ -64,6 +64,17 @@
 <p class="enumeration">
     En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
+{{else}}
+<p class="enumeration">
+    Es preciso mencionar que, respecto de la imputación realizada, el/la administrado no presentó descargo a la Resolución Sub Directoral.
+</p>
+<p class="enumeration">
+    La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida al/la administrado (a); respecto de lo cual el/la administrado (a) <u>no presentó descargos a lo señalado en el Informe Final de Instrucción.</u>
+</p>
+<p class="enumeration">
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
+</p>
+{{/if}}
 <ul>
     <li>
         Conforme al Oficio N° xxx de fecha xxxx recibido de parte de la ARFFS (Registro N° xxxx) el/la administrado (a), tiene una deuda pendiente de pago (i) ascendente US$/. xxxx dólares correspondiente a xx cuotas atrasadas de abonos más intereses por concepto de derecho de aprovechamiento refinanciada referida a los periodos 20xx -20xx, 20xx -20xx, 20xx -20xx; así como (ii) S/. 7 007.79 soles correspondiente a los periodos xxx, estos periodos fueron materia de imputación, por cuanto al inicio del presente PAU ya habían concluido. Lo antes indicado se encuentra ratificado mediante el Oficio Nº xxxxx de fecha xxxx, (registro N°) suscrito por la ARRFS antes citada.
@@ -75,7 +86,6 @@
 <p class="enumeration">
     Por las consideraciones antes señaladas, la causal de caducidad prevista en el literal e) del artículo 153 de la LFFS, concordante con el literal e) del artículo 44 del RGF y con el numeral xxx de la Cláusula xxxx del Contrato de Concesión, se encuentra acreditada; criterio acorde a lo señalado en el Informe Final de Instrucción.
 </p>
-{{/if}}
 
 <p class="enumeration">
     Sin perjuicio de ello, es necesario precisar que, en el marco de la LFFS y el RGF, el área de la concesión caducada continúa siendo parte del Bosque de Producción Permanente y la ARFFS tiene la facultad de otorgar un nuevo título habilitante, cumpliendo las disposiciones vigentes sobre la materia. Asimismo, debe considerarse que de acuerdo al artículo 123 del RGF está “(…) prohibido el otorgamiento de títulos de propiedad, certificados o constancias de posesión en tierras de dominio público con capacidad de uso mayor forestal o de protección, con o sin cobertura forestal, así como cualquier tipo de reconocimiento o instalación de infraestructura pública de servicios, bajo responsabilidad de los funcionarios involucrados”.
