--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_1.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_1.cshtml
@@ -18,7 +18,7 @@
                 <i>“No establecer o no mantener los linderos, hitos u otras señales que permitan identificar el área del título habilitante”</i>
             </td>
             <td style="border: 1px solid #000;">
-                ${infraccion.detalle || 'XX'}
+                No establecer linderos, hitos u otras señales en los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03)
             </td>
             <td style="border: 1px solid #000; text-align: center;">
                 Escrito xxxxxxx SITD xxxxxxxxx
@@ -36,9 +36,9 @@
     Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° xxxxxxxxxx de fecha xx de xxxxx de 2023, ingresado con fecha xx de xxxx de 2023 (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
 </p>
 <ol style="list-style-type: lower-alpha">
-    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>    
-    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>    
-    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>    
+    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
+    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
+    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
 </ol>
 <p class="enumeration">
     En ese sentido, la Autoridad Instructora realizó el análisis correspondiente al Expediente Administrativo, así como de los documentos mencionados precedentemente, concluyendo lo siguiente:
@@ -65,6 +65,17 @@
 <p class="enumeration">
     Al respecto, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
+{{else}}
+<p class="enumeration">
+    Es preciso mencionar que, respecto de la imputación realizada, el/la administrado no presentó descargo a la Resolución Sub Directoral.
+</p>
+<p class="enumeration">
+    La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida al/la administrado (a); respecto de lo cual el/la administrado (a) <u>no presentó descargos a lo señalado en el Informe Final de Instrucción.</u>
+</p>
+<p class="enumeration">
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
+</p>
+{{/if}}
 <ul>
     <li>
         Conforme al contenido Informe de Supervisión, su numeral xxx, cuadro N° xx, se advierte que, el/la administrado (a) no ha cumplido con la señalización de los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03), igualmente, con el linderamiento de las Parcelas de Corta”, afirmación que guarda concordancia con la siguiente imagen fotográfica tomada durante la supervisión:
@@ -82,7 +93,6 @@
         El RISMFFS permite que la infracción analizada se subsane, incluso hasta el vencimiento del plazo previsto para la presentación de los descargos en la fase instructora; siendo que, el/la administrado (a) no cumplió con establecer linderos u otras señales.
     </li>
 </ul>
-{{/if}}
 
 <p class="enumeration">
     En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 1 del Anexo 1 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
