--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_10.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_10.cshtml
@@ -18,7 +18,7 @@
                 <i>“Talar, extraer y/o aprovechar recursos forestales no autorizados en el área del título habilitante, cuando sea imputable a la administrada en su condición de titular del título habilitante”.</i>
             </td>
             <td style="border: 1px solid #000;">
-                ${infraccion.detalle || 'XX'}
+                Realizar la tala de árboles semilleros y/o no declarados de la especie con un volumen de xxx
             </td>
             <td style="border: 1px solid #000; text-align: center;">
                 Escrito xxxxxxx SITD xxxxxxxxx
@@ -49,7 +49,7 @@
     </li>
 </ul>
 <p class="enumeration">
-    Al respecto, mediante escrito N°xxx con SITD N° xxxxxxx de fecha xx de xxxx de xxxx, el/la administrado (a) presentó su descargo al Informe Final de Instrucción, señalando lo siguiente:
+    Al respecto, mediante escrito N° xxx con SITD N° xxxxxxx de fecha xx de xxxx de xxxx, el/la administrado (a) presentó su descargo al Informe Final de Instrucción, señalando lo siguiente:
 </p>
 <ol style="list-style-type: lower-alpha">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
@@ -65,12 +65,26 @@
 <p class="enumeration">
     En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
+{{else}}
+<p class="enumeration">
+    Es preciso mencionar que, respecto de la imputación realizada, el/la administrado no presentó descargo a la Resolución Sub Directoral.
+</p>
+<p class="enumeration">
+    La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida al/la administrado (a); respecto de lo cual el/la administrado (a) <u>no presentó descargos a lo señalado en el Informe Final de Instrucción.</u>
+</p>
+<p class="enumeration">
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
+</p>
+{{/if}}
+
 <ul>
     <li>
-        El/la administrado (a) realizó el aprovechamiento de xxxx m3 de la especie xxxxxx de madera no autorizada que proviene de un árbol semillero, conforme se detalla en el cuadro siguiente:
+        El/la administrado (a) realizó el aprovechamiento de xxxx m<sup>3</sup> de la especie xxxxxx de madera no autorizada que proviene de un árbol semillero, conforme se detalla en el cuadro siguiente:
     </li>
 </ul>
-<p style="text-align: center;"><strong>Cuadro N° 02: Extracción no autorizada de árboles semilleros en el área de la PC N° 04 del PO N° 01</strong></p>
+<p class="text-align: center;">
+    <strong>Cuadro.</strong>: Extracción no autorizada de árboles semilleros en el área de la PC N° 04 del PO N° 01
+</p>
 <table cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
@@ -83,39 +97,39 @@
     </thead>
     <tbody>
         <tr>
-            <td style="text-align: center; border: 1px solid #000;">1</td>
-            <td style="text-align: center; border: 1px solid #000;">
+            <td style="border: 1px solid #000;">1</td>
+            <td style="border: 1px solid #000;">
                 Manilkara bidentata “quinilla” de código 5-36
             </td>
-            <td style="text-align: center; border: 1px solid #000;">Movilizado</td>
-            <td style="text-align: center; border: 1px solid #000;">XXX m<sup>3</sup></td>
-            <td style="text-align: center; border: 1px solid #000;">273971 E – 9554238 N</td>
+            <td style="border: 1px solid #000;">
+                Movilizado
+            </td>
+            <td style="border: 1px solid #000; text-align: center;">
+                XXX m<sup>3</sup>
+            </td>
+            <td style="border: 1px solid #000; text-align: center;">
+                XXX E – XXX N
+            </td>
         </tr>
     </tbody>
     <tfoot>
         <tr>
-            <td style="text-align: center; border: 1px solid #000;" colspan="3">
-                <strong>Total</strong>
-            </td>
-            <td style="text-align: center; border: 1px solid #000;">
-                <strong>XXX m<sup>3</sup></strong>
-            </td>
-            <td style="text-align: center; border: 1px solid #000;"></td>
+            <td style="border: 1px solid #000; background-color: #bfbfbf;" colspan="3">Total</td>
+            <td style="border: 1px solid #000;">XXX m<sup>3</sup></td>
+            <td style="border: 1px solid #000; background-color: #bfbfbf;"></td>
         </tr>
     </tfoot>
 </table>
-<div style="font-size: 8pt;">
-    <strong>Fuente:</strong> Elaboración propia en base al Informe de Supervisión N° xxxx-202X-OSINFOR/08.1.2
-</div>
+<div style="font-size: 8pt;">Fuente: Elaboración propia en base al Informe de Supervisión N° xxxx-202X-OSINFOR/08.1.2.</div>
+
 <ul>
     <li>
-        El aprovechamiento xxxx m3 de la especie xxxxx, significa el incumplimiento del plan de manejo, documento que el/la propio (a) administrado (a) presentó ante la ARFFS y fue aprobado. En efecto, en el referido plan de manejo, el/la administrado (a) declaró aquellos árboles que serían aprovechados, entre los que no se encuentra el consignado en el cuadro que precede.
+        El aprovechamiento xxxx m<sup>3</sup> de la especie xxxxx, significa el incumplimiento del plan de manejo, documento que el/la propio (a) administrado (a) presentó ante la ARFFS y fue aprobado. En efecto, en el referido plan de manejo, el/la administrado (a) declaró aquellos árboles que serían aprovechados, entre los que no se encuentra el consignado en el cuadro que precede.
     </li>
     <li>
         Finalmente, a pesar de que el RISMFFS señala que la infracción analizada es subsanable, la misma que se efectúa dentro del plazo previsto para la presentación de los descargos en la fase instructora, el/la administrado (a) no realizó la subsanación correspondiente, a pesar de haberse informado mediante xxxxxx.
     </li>
 </ul>
-{{/if}}
 
 <p class="enumeration">
     En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 10 del Anexo 1 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
