--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_11_1.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_11_1.cshtml
@@ -18,7 +18,7 @@
                 <i>“No tener libro de operaciones o no registrar la información endicho libro, de acuerdo a las disposiciones establecidas”</i>
             </td>
             <td style="border: 1px solid #000;">
-                ${infraccion.detalle || 'XX'}
+                No registrar la información en el Libro de Operaciones de acuerdo a las disposiciones establecidas
             </td>
             <td style="border: 1px solid #000; text-align: center;">
                 Escrito xxxxxxx SITD xxxxxxxxx
@@ -65,6 +65,17 @@
 <p class="enumeration">
     En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
+{{else}}
+<p class="enumeration">
+    Es preciso mencionar que, respecto de la imputación realizada, el/la administrado no presentó descargo a la Resolución Sub Directoral.
+</p>
+<p class="enumeration">
+    La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida al/la administrado (a); respecto de lo cual el/la administrado (a) <u>no presentó descargos a lo señalado en el Informe Final de Instrucción.</u>
+</p>
+<p class="enumeration">
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
+</p>
+{{/if}}
 <ul>
     <li>
         Mediante el Oficio N° xx- (Registro N° xx) de fecha xx, la ARFFS señaló que el código de Libro de Operaciones otorgado al título habilitante del/la administrado (a) es: xxx.
@@ -73,13 +84,12 @@
         Revisado el Libro de operaciones, se aprecia que, <strong>no presenta el registro en las secciones tala, trozado, xx, los siguientes árboles: xxx</strong>
     </li>
     <li>
-        En efecto, existen evidencias de que el Libro de Operaciones no se encuentra actualizado, por ende, <strong>no registra información de acuerdo a las disposiciones establecidas en el SERFOR().</strong>
+        En efecto, existen evidencias de que el Libro de Operaciones no se encuentra actualizado, por ende, <strong>no registra información de acuerdo a las disposiciones establecidas en el SERFOR.</strong>
     </li>
     <li>
         A pesar de que el RISMFFS señala que la infracción analizada es subsanable, la misma que se efectúa dentro del plazo previsto para la presentación de los descargos en la fase instructora; el/la administrado (a) no cumplió con remitir el Libro de Operaciones con la información registrada de acuerdo a las disposiciones legalmente establecidas.
-    </li>    
+    </li>
 </ul>
-{{/if}}
 
 <p class="enumeration">
     En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 11 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
