--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_16.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_16.cshtml
@@ -18,7 +18,7 @@
                 <i>“Incumplir con las obligaciones legalmente establecidas en los títulos habilitantes, planes de manejo u otros actos administrativos, diferentes a las causales de caducidad”</i>
             </td>
             <td style="border: 1px solid #000;">
-                ${infraccion.detalle || 'XX'}
+                Declarar ante la autoridad correspondiente los volúmenes de madera extraído al amparo de su TH.
             </td>
             <td style="border: 1px solid #000; text-align: center;">
                 Escrito xxxxxxx SITD xxxxxxxxx
@@ -65,10 +65,21 @@
 <p class="enumeration">
     En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
+{{else}}
+<p class="enumeration">
+    Es preciso mencionar que, respecto de la imputación realizada, el/la administrado no presentó descargo a la Resolución Sub Directoral.
+</p>
+<p class="enumeration">
+    La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida al/la administrado (a); respecto de lo cual el/la administrado (a) <u>no presentó descargos a lo señalado en el Informe Final de Instrucción.</u>
+</p>
+<p class="enumeration">
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
+</p>
+{{/if}}
 <ul>
     <li>
         De la revisión de lo evidenciado en campo, se advierte que el/la administrado (a) no declaró ante la autoridad el aprovechamiento de un volumen de xxxx m3(), correspondiente a las especies xxxx, tal como se muestra en el siguiente cuadro:
-    </li>      
+    </li>
 </ul>
 <p style="text-align: center;"><strong>Cuadro.</strong></p>
 <ul>
@@ -79,7 +90,6 @@
         En consecuencia, teniendo en cuenta que la vigencia del Permiso Forestal fue desde el día <strong>xxxxxx hasta el xxxx</strong> y que según el Balance de Extracción y Forma 20 de fecha <strong>xxxxx</strong> el/la administrado (a) no había declarado el volumen de xxxxxm3; se concluye que se encuentra incumpliendo con lo establecido en la cláusula séptima del Permiso Forestal N° xxxxxxx.
     </li>
 </ul>
-{{/if}}
 
 <p class="enumeration">
     En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 16 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
