--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_2.cshtml
@@ -18,7 +18,7 @@
                 <i>“No entregar o presentar información o documentación legalmente exigible en el plazo previsto, o cuando la autoridad competente lo requiera”</i>
             </td>
             <td style="border: 1px solid #000;">
-                ${infraccion.detalle || 'XX'}
+                No presentar el Informe de Ejecución xxxx, el cual debe contener las actividades de aprovechamiento de productos forestales maderables y no maderables
             </td>
             <td style="border: 1px solid #000; text-align: center;">
                 Escrito xxxxxxx SITD xxxxxxxxx
@@ -36,9 +36,9 @@
     Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° xxxxxxxxxx de fecha xx de xxxxx de 202X, ingresado con fecha xx de xxxx de 202X (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
 </p>
 <ol style="list-style-type: lower-alpha">
-    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>    
-    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>    
-    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>    
+    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
+    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
+    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
 </ol>
 <p class="enumeration">
     En ese sentido, la Autoridad Instructora realizó el análisis correspondiente al Expediente Administrativo, así como de los documentos mencionados precedentemente, concluyendo lo siguiente:
@@ -51,6 +51,15 @@
 <p class="enumeration">
     La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida el/la administrado (a); respecto del cual el/la administrado (a) toda vez que, no obra documento mediante el cual haya presentado los informes de ejecución forestal ante la autoridad forestal competente, dentro del plazo legal establecido para tal efecto, conforme al siguiente cuadro:
 </p>
+{{else}}
+<p class="enumeration">
+    Es preciso mencionar que, respecto de la imputación realizada, el/la administrado no presentó descargo a la Resolución Sub Directoral.
+</p>
+<p class="enumeration">
+    La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida al/la administrado (a); respecto de lo cual el/la administrado (a) <u>no presentó descargos a lo señalado en el Informe Final de Instrucción.</u>
+</p>
+{{/if}}
+
 <table cellpadding="4" border="0" style="font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%; margin-bottom: 0;">
     <thead>
         <tr>
@@ -110,6 +119,7 @@
 </table>
 <div style="font-size: 8pt;">Fuente: Elaboración propia.</div>
 
+{{if informe.COD_TIPO_INFORME == 1}}
 <p class="enumeration">
     Al respecto, mediante escrito N°xxx con SITD N° xxxxxxx de fecha xx de xxxx de xxxx, el/la administrado (a) presentó su descargo al Informe Final de Instrucción, señalando lo siguiente:
 </p>
@@ -124,9 +134,11 @@
     <li>Con relación al argumento señalado en el acápite b) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite c) xxxxxxxxxxxxxxxxxxx</li>
 </ul>
+{{/if}}
 <p class="enumeration">
-    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, ha quedado acreditado lo siguiente:
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
 </p>
+{{if informe.COD_TIPO_INFORME == 1}}
 <ul>
     <li>
         El PMFI/PO N° xx – PC xx fue aprobado con fecha xx de xxxx de xxxx, con una vigencia hasta el xx de diciembre de xxx; por lo que el/la administrada (o) tenía plazo hasta el xx de xxx de xxxx, para presentar ante la ARFFS y al OSINFOR, el informe de
@@ -137,12 +149,13 @@
     </li>
 </ul>
 <p style="text-align: center;"><strong>Consignar imagen<br />Fuente: SITD N°xxxxxxxxxx</strong></p>
+{{/if}}
+
 <ul>
     <li>
         Siendo ello así, de acuerdo al cargo de presentación ante la ARFFS adjunto a los descargos contra el Informe Final de Instrucción (Registro N° xxxxxxx), se concluye que el/la administrada (o) presentó el informe de ejecución anual/final del PMFI/PO N° xx – PC xx, dentro del plazo legal establecido en el RGF, acreditando de este modo el cumplimiento de la obligación establecida en el literal b) del numeral 43.1 del artículo 43 concordante con el artículo 66 del RGF.
-    </li>    
+    </li>
 </ul>
-{{/if}}
 
 <p class="enumeration">
     En ese contexto, de acuerdo a lo señalado precedentemente, se desestima/se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 2 del Anexo 1 del RISMFFS.
