--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_21.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_21.cshtml
@@ -18,7 +18,7 @@
                 <i>“Talar, extraer y/o aprovechar recursos forestales sin autorización en su condición o no de titular del título habilitante, a excepción de los aprovechados por subsistencia”</i>
             </td>
             <td style="border: 1px solid #000;">
-                ${infraccion.detalle || 'XX'}
+                Extracción injustificada de un volumen de XX m3 de madera correspondiente a la especie XX”
             </td>
             <td style="border: 1px solid #000; text-align: center;">
                 Escrito xxxxxxx SITD xxxxxxxxx
@@ -65,10 +65,21 @@
 <p class="enumeration">
     En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
+{{else}}
+<p class="enumeration">
+    Es preciso mencionar que, respecto de la imputación realizada, el/la administrado no presentó descargo a la Resolución Sub Directoral.
+</p>
+<p class="enumeration">
+    La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida al/la administrado (a); respecto de lo cual el/la administrado (a) <u>no presentó descargos a lo señalado en el Informe Final de Instrucción.</u>
+</p>
+<p class="enumeration">
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
+</p>
+{{/if}}
 <ul>
     <li>
         Evidencias de extracciones no autorizadas, conforme se ilustra en el siguiente cuadro:
-    </li>      
+    </li>
 </ul>
 <p style="text-align: center;"><strong>Cuadro.</strong></p>
 <table cellpadding="4" border="0" style="font-family: Arial; font-size: 9pt; border-collapse: collapse; line-height: 150%;">
@@ -126,7 +137,6 @@
         La extracción no autorizada es atribuible al/la administrado (a), puesto que reportó su aprovechamiento, lo que implica incumplimiento del documento de gestión, el cual es un instrumento que comprende las actividades de manejo a desarrollarse en una unidad de aprovechamiento, a fin de realizar un aprovechamiento sostenible del recurso maderable autorizado; y, que el propio administrado presentó ante la ARFFS y fue aprobado.
     </li>
 </ul>
-{{/if}}
 
 <p class="enumeration">
     En ese contexto, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 21 del Anexo 1 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
