--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_b.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_b.cshtml
@@ -64,6 +64,17 @@
 <p class="enumeration">
     En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
+{{else}}
+<p class="enumeration">
+    Es preciso mencionar que, respecto de la imputación realizada, el/la administrado no presentó descargo a la Resolución Sub Directoral.
+</p>
+<p class="enumeration">
+    La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida al/la administrado (a); respecto de lo cual el/la administrado (a) <u>no presentó descargos a lo señalado en el Informe Final de Instrucción.</u>
+</p>
+<p class="enumeration">
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
+</p>
+{{/if}}
 <ul>
     <li>
         El literal b) del artículo 153 de la Ley N° 29763, Ley Forestal y de Fauna Silvestre, de modo concordante con el literal b) del artículo 44 del RGF, constituye una causal de caducidad, la extracción o movilización de recursos forestales no autorizados, lo que ha ocurrido en el presente caso, conforme a lo analizado en los numerales 28 al 32 de la presente resolución.
@@ -131,7 +142,6 @@
         En ese sentido, teniendo en consideración el principio de legalidad y el de predictibilidad o confianza legítima, esta Autoridad debe actuar conforme a lo establecido en las normas antes citadas, no pudiéndose apartar del análisis que se realice en base a la aplicación los referidos criterios. En efecto, es importante señalar que toda actuación de la Administración tiene una finalidad objetivamente determinada y se orienta a satisfacer un interés general que, en el presente caso, es tutelar el patrimonio forestal y de fauna silvestre, el cual se ha visto gravemente afectado por el manejo realizado a través del título habilitante.
     </li>
 </ul>
-{{/if}}
 
 <p class="enumeration">
     En consecuencia, la causal de caducidad prevista en el literal b) del artículo 153 de la LFFS, concordante con el literal b) del artículo 44 del RGF, se encuentra acreditada.
