--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Predios privados/infracciones/inciso_32.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Predios privados/infracciones/inciso_32.cshtml
@@ -14,11 +14,11 @@
                 Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
-                Numeral 1 del Anexo 1 del RISMFFS.<br /><br />
-                <i>“No establecer o no mantener los linderos, hitos u otras señales que permitan identificar el área del título habilitante”</i>
+                Numeral 32 del Anexo 1 del RISMFFS.<br /><br />
+                <i>“Elaborar, suscribir y/o presentar planes de manejo e informes de ejecución que contengan información falsa o adulterada”</i>
             </td>
             <td style="border: 1px solid #000;">
-                No establecer linderos, hitos u otras señales en los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03)
+                Presentar el xxx, periodo xxxx, conteniendo información falsa, debido a la inexistencia de 45 individuos de las especies xxxx que representan un 22% del total de aprobados para el referido XXX.
             </td>
             <td style="border: 1px solid #000; text-align: center;">
                 Escrito xxxxxxx SITD xxxxxxxxx
@@ -33,7 +33,7 @@
 
 {{if informe.COD_TIPO_INFORME == 1}}
 <p class="enumeration">
-    Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° xxxxxxxxxx de fecha xx de xxxxx de 202X, ingresado con fecha xx de xxxx de 202X (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
+    Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° xxxxxxxxxx de fecha xx de xxxxx de 2023, ingresado con fecha xx de xxxx de 2023 (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
 </p>
 <ol style="list-style-type: lower-alpha">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
@@ -49,21 +49,21 @@
     </li>
 </ul>
 <p class="enumeration">
-    Mediante Escrito S/N de fecha XX de XX de 20XX con Registro XX, el/la administrado presentó sus descargos al informe final de instrucción, donde se advierte los siguientes argumentos:
+    Al respecto, mediante escrito N° xxx con SITD N° xxxxxxx de fecha xx de xxxx de xxxx, el/la administrado (a) presentó su descargo al Informe Final de Instrucción, señalando lo siguiente:
 </p>
 <ol style="list-style-type: lower-alpha">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
 </ol>
-<p class="enumeration">Respecto a lo señalado por el titular, se advierte el siguiente análisis:</p>
+<p class="enumeration">Respecto a lo señalado por el/la administrado (a); se advierte el siguiente análisis:</p>
 <ul>
     <li>Con relación al argumento señalado en el acápite a) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite b) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite c) xxxxxxxxxxxxxxxxxxx</li>
 </ul>
 <p class="enumeration">
-    Al respecto, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
 {{else}}
 <p class="enumeration">
@@ -78,22 +78,25 @@
 {{/if}}
 <ul>
     <li>
-        Conforme al contenido Informe de Supervisión, su numeral xxx, cuadro N° xx, se advierte que, el/la administrado (a) no ha cumplido con la señalización de los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03), igualmente, con el linderamiento de las Parcelas de Corta”, afirmación que guarda concordancia con la siguiente imagen fotográfica tomada durante la supervisión:
+        Mediante la Resolución Jefatural N° xxxx de fecha xxx, la ARFFS aprobó el xxx, en la cual se establece que el aprovechamiento se realizará de conformidad con los datos (vértices de ubicación en coordenadas UTM, especie y volumen) señalados en el plan de manejo aprobado.
+    </li>
+    <li>
+        No obstante, durante la supervisión en campo, se constató la inexistencia de xxx individuos (xxx aprovechables y xx semilleros), de las especies xxx, los cuales no existen en su totalidad de acuerdo a las coordenadas UTM declaradas en el xxx, así como tampoco se encontraron vestigios de su aprovechamiento, conforme se advierte de las siguientes imágenes:
     </li>
 </ul>
-<p style="text-align: center;"><strong>Adjuntar imagen</strong></p>
+<p style="text-align: center;"><strong>Mapas, y/o tomas fotográficas que evidencian la inexistencia</strong></p>
 <ul>
     <li>
-        Ahora bien, la mencionada obligación no solo se encuentra establecida en el literal xx del numeral <strong>xxxx del artículo xxx del RGF y/o RGFFSCNCC</strong>, además se encuentra establecida en el numeral xx del <strong>PO/PMF</strong>, donde se señala que, en el área de producción maderable se realizará entre otras actividades, la señalización de vértices y el linderamiento del área a manejar, lo cual incluiría las PC 01, 02 y 03.
+        A pesar de ello, mediante el Informe de Ejecución (periodo xxxx-xxxx), presentado por el/la administrado (a) se señaló el aprovechamiento de xxxx de la especie xxx conforme se advierte de las siguientes imágenes:
     </li>
     <li>
-        En efecto, el/la administrado (a) no ha cumplido con establecer linderos, hitos u otras señales en los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03); tampoco ha realizado el linderamiento de las Parcelas de Corta xx.
+        Al respecto, el artículo xxx del (RGF o RGFFSCNCC), establece que: “El informe de ejecución (…) tiene carácter de declaración jurada”.
     </li>
     <li>
-        El RISMFFS permite que la infracción analizada se subsane, incluso hasta el vencimiento del plazo previsto para la presentación de los descargos en la fase instructora; siendo que, el/la administrado (a) no cumplió con establecer linderos u otras señales.
+        En consecuencia, al haberse determinado que xxx individuos (xxx aprovechables y xx semilleros) declarados no existen en campo y que no se evidenciaron actividades de aprovechamiento en campo, se ha configurado la infracción consistente en elaborar, formular, suscribir, presentar o remitir documentos con información adulterada, falsa o incompleta contenida en documentos físicos o medios informáticos, en este caso, la información falsa contenida en el informe de ejecución que fue presentado por la administrada a la (precisar ARFFS y/o OSINFOR), a través del escrito xxxx. de fecha xxxxx, con registro N° xxxx.
     </li>
 </ul>
 
 <p class="enumeration">
-    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 1 del Anexo 1 del RISMFFS; <u>criterio acorde a lo señalado en el Informe Final de Instrucción.</u>
+    En ese contexto, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 32 del Anexo 1 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
 </p>
