--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Predios privados/infracciones/inciso_10.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Predios privados/infracciones/inciso_10.cshtml
@@ -14,11 +14,11 @@
                 Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
-                Numeral 16 del Anexo 1 del RISMFFS.<br /><br />
-                <i>“Incumplir con las obligaciones legalmente establecidas en los títulos habilitantes, planes de manejo u otros actos administrativos, diferentes a las causales de caducidad”</i>
+                Numeral 10 del Anexo 1 del RISMFFS.<br /><br />
+                <i>“Talar, extraer y/o aprovechar recursos forestales no autorizados en el área del título habilitante, cuando sea imputable a la administrada en su condición de titular del título habilitante”.</i>
             </td>
             <td style="border: 1px solid #000;">
-                Declarar ante la autoridad correspondiente los volúmenes de madera extraído al amparo de su TH.
+                Realizar la tala de árboles semilleros y/o no declarados de la especie con un volumen de xxx
             </td>
             <td style="border: 1px solid #000; text-align: center;">
                 Escrito xxxxxxx SITD xxxxxxxxx
@@ -76,21 +76,61 @@
     En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
 </p>
 {{/if}}
+
 <ul>
     <li>
-        De la revisión de lo evidenciado en campo, se advierte que el/la administrado (a) no declaró ante la autoridad el aprovechamiento de un volumen de xxxx m3(), correspondiente a las especies xxxx, tal como se muestra en el siguiente cuadro:
+        El/la administrado (a) realizó el aprovechamiento de xxxx m<sup>3</sup> de la especie xxxxxx de madera no autorizada que proviene de un árbol semillero, conforme se detalla en el cuadro siguiente:
     </li>
 </ul>
-<p style="text-align: center;"><strong>Cuadro.</strong></p>
+<p class="text-align: center;">
+    <strong>Cuadro.</strong>: Extracción no autorizada de árboles semilleros en el área de la PC N° 04 del PO N° 01
+</p>
+<table cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+    <thead>
+        <tr style="background-color: #bfbfbf;">
+            <th style="text-align: center; border: 1px solid #000;">N°</th>
+            <th style="text-align: center; border: 1px solid #000;">Especie</th>
+            <th style="text-align: center; border: 1px solid #000;">Estado</th>
+            <th style="text-align: center; border: 1px solid #000;">Volumen</th>
+            <th style="text-align: center; border: 1px solid #000;">Coordenadas</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="border: 1px solid #000;">1</td>
+            <td style="border: 1px solid #000;">
+                Manilkara bidentata “quinilla” de código 5-36
+            </td>
+            <td style="border: 1px solid #000;">
+                Movilizado
+            </td>
+            <td style="border: 1px solid #000; text-align: center;">
+                XXX m<sup>3</sup>
+            </td>
+            <td style="border: 1px solid #000; text-align: center;">
+                XXX E – XXX N
+            </td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <tr>
+            <td style="border: 1px solid #000; background-color: #bfbfbf;" colspan="3">Total</td>
+            <td style="border: 1px solid #000;">XXX m<sup>3</sup></td>
+            <td style="border: 1px solid #000; background-color: #bfbfbf;"></td>
+        </tr>
+    </tfoot>
+</table>
+<div style="font-size: 8pt;">Fuente: Elaboración propia en base al Informe de Supervisión N° xxxx-202X-OSINFOR/08.1.2.</div>
+
 <ul>
     <li>
-        Al respecto, como ha señalado el Tribunal Forestal y de Fauna Silvestre “(...) los administrados se encuentran en la obligación de sustentar la procedencia legal de los productos forestales extraídos, por ello, se exige que ésta se realice mediante las guías de transporte forestal, toda vez que, así se puede acreditar su origen legal, dejando un registro en cuanto a especies y volúmenes movilizados, que permite a la autoridad hacer seguimiento a la trazabilidad del recurso forestal extraído e identificar su trayectoria desde el primer puesto de control.”
+        El aprovechamiento xxxx m<sup>3</sup> de la especie xxxxx, significa el incumplimiento del plan de manejo, documento que el/la propio (a) administrado (a) presentó ante la ARFFS y fue aprobado. En efecto, en el referido plan de manejo, el/la administrado (a) declaró aquellos árboles que serían aprovechados, entre los que no se encuentra el consignado en el cuadro que precede.
     </li>
     <li>
-        En consecuencia, teniendo en cuenta que la vigencia del Permiso Forestal fue desde el día <strong>xxxxxx hasta el xxxx</strong> y que según el Balance de Extracción y Forma 20 de fecha <strong>xxxxx</strong> el/la administrado (a) no había declarado el volumen de xxxxxm3; se concluye que se encuentra incumpliendo con lo establecido en la cláusula séptima del Permiso Forestal N° <strong>xxxxxxx</strong>.
+        Finalmente, a pesar de que el RISMFFS señala que la infracción analizada es subsanable, la misma que se efectúa dentro del plazo previsto para la presentación de los descargos en la fase instructora, el/la administrado (a) no realizó la subsanación correspondiente, a pesar de haberse informado mediante xxxxxx.
     </li>
 </ul>
 
 <p class="enumeration">
-    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 16 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
+    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 10 del Anexo 1 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
 </p>
