--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Predios privados/infracciones/inciso_11.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Predios privados/infracciones/inciso_11.cshtml
@@ -14,11 +14,11 @@
                 Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
-                Numeral 1 del Anexo 1 del RISMFFS.<br /><br />
-                <i>“No establecer o no mantener los linderos, hitos u otras señales que permitan identificar el área del título habilitante”</i>
+                Numeral 11 del Anexo 1 del RISMFFS.<br /><br />
+                <i>“No tener libro de operaciones o no registrar la información endicho libro, de acuerdo a las disposiciones establecidas”</i>
             </td>
             <td style="border: 1px solid #000;">
-                No establecer linderos, hitos u otras señales en los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03)
+                No tener libro de operaciones de acuerdo a las disposiciones establecidas
             </td>
             <td style="border: 1px solid #000; text-align: center;">
                 Escrito xxxxxxx SITD xxxxxxxxx
@@ -33,7 +33,7 @@
 
 {{if informe.COD_TIPO_INFORME == 1}}
 <p class="enumeration">
-    Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° xxxxxxxxxx de fecha xx de xxxxx de 202X, ingresado con fecha xx de xxxx de 202X (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
+    Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° xxxxxxxxxx de fecha xx de xxxxx de 2023, ingresado con fecha xx de xxxx de 2023 (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
 </p>
 <ol style="list-style-type: lower-alpha">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
@@ -49,21 +49,21 @@
     </li>
 </ul>
 <p class="enumeration">
-    Mediante Escrito S/N de fecha XX de XX de 20XX con Registro XX, el/la administrado presentó sus descargos al informe final de instrucción, donde se advierte los siguientes argumentos:
+    Al respecto, mediante escrito N° xxx con SITD N° xxxxxxx de fecha xx de xxxx de xxxx, el/la administrado (a) presentó su descargo al Informe Final de Instrucción, señalando lo siguiente:
 </p>
 <ol style="list-style-type: lower-alpha">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
 </ol>
-<p class="enumeration">Respecto a lo señalado por el titular, se advierte el siguiente análisis:</p>
+<p class="enumeration">Respecto a lo señalado por el/la administrado (a); se advierte el siguiente análisis:</p>
 <ul>
     <li>Con relación al argumento señalado en el acápite a) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite b) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite c) xxxxxxxxxxxxxxxxxxx</li>
 </ul>
 <p class="enumeration">
-    Al respecto, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
 {{else}}
 <p class="enumeration">
@@ -72,28 +72,28 @@
 <p class="enumeration">
     La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida al/la administrado (a); respecto de lo cual el/la administrado (a) <u>no presentó descargos a lo señalado en el Informe Final de Instrucción.</u>
 </p>
-<p class="enumeration">
-    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
-</p>
 {{/if}}
 <ul>
     <li>
-        Conforme al contenido Informe de Supervisión, su numeral xxx, cuadro N° xx, se advierte que, el/la administrado (a) no ha cumplido con la señalización de los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03), igualmente, con el linderamiento de las Parcelas de Corta”, afirmación que guarda concordancia con la siguiente imagen fotográfica tomada durante la supervisión:
-    </li>
-</ul>
-<p style="text-align: center;"><strong>Adjuntar imagen</strong></p>
-<ul>
-    <li>
-        Ahora bien, la mencionada obligación no solo se encuentra establecida en el literal xx del numeral <strong>xxxx del artículo xxx del RGF y/o RGFFSCNCC</strong>, además se encuentra establecida en el numeral xx del <strong>PO/PMF</strong>, donde se señala que, en el área de producción maderable se realizará entre otras actividades, la señalización de vértices y el linderamiento del área a manejar, lo cual incluiría las PC 01, 02 y 03.
+        Con fecha xxx se aprobó la xxxx en favor del/de la administrado (a), con vigencia desde el XX de XXX de 202X hasta el XX de XXX de 202X.
     </li>
     <li>
-        En efecto, el/la administrado (a) no ha cumplido con establecer linderos, hitos u otras señales en los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03); tampoco ha realizado el linderamiento de las Parcelas de Corta xx.
+        En el marco de la implementación de la DEMA el/la administrado (a) efectuó aprovechamiento forestal, dado que, durante la diligencia de supervisión, <u><strong>xx árboles</strong> fueron hallados en tocón, asimismo, efectuó su última movilización de madera el xx  de xxxx de 202x</u>.
     </li>
     <li>
-        El RISMFFS permite que la infracción analizada se subsane, incluso hasta el vencimiento del plazo previsto para la presentación de los descargos en la fase instructora; siendo que, el/la administrado (a) no cumplió con establecer linderos u otras señales.
+        Acorde a la Resolución de Dirección Ejecutiva N° 264-2019-MINAGRI-SERFOR-DE, de fecha de fecha 30 de diciembre de 2019, el/la administrado (a) tenía la obligación registrar la información del aprovechamiento realizado desde la Sección “Tala” del Libro de Operaciones.
+    </li>
+    <li>
+        Al respecto, revisado los documentos del presente PAU,  y de la búsqueda realizada en el Sistema de Trámite Documentario - SITD del OSINFOR, se advierte que el/la administrado (a) no ha presentado el Libro de Operaciones, hasta la fecha de emisión de la presente resolución, a pesar de que se encontraba en la obligatoriedad de contar con el libro de operaciones.
+    </li>
+    <li>
+        Aunado a ello, mediante Oficio N° xxx, de fecha xxxx (Registro N° 202209761), la ARFFS señala que, para el/la administrado (a) no se ha aprobado codificación del libro de operaciones.
+    </li>
+    <li>
+        En consecuencia, el/la administrado (a), no ha cumplido con tener el Libro de Operaciones de acuerdo a las disposiciones establecidas.
     </li>
 </ul>
 
 <p class="enumeration">
-    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 1 del Anexo 1 del RISMFFS; <u>criterio acorde a lo señalado en el Informe Final de Instrucción.</u>
+    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 11 del Anexo 1 del RISMFFS; <u>criterio acorde a lo señalado en el Informe Final de Instrucción.</u>
 </p>
