--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Predios privados/infracciones/inciso_11_1.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Predios privados/infracciones/inciso_11_1.cshtml
@@ -14,11 +14,11 @@
                 Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
-                Numeral 1 del Anexo 1 del RISMFFS.<br /><br />
-                <i>“No establecer o no mantener los linderos, hitos u otras señales que permitan identificar el área del título habilitante”</i>
+                Numeral 11 del Anexo 1 del RISMFFS.<br /><br />
+                <i>“No tener libro de operaciones o no registrar la información endicho libro, de acuerdo a las disposiciones establecidas”</i>
             </td>
             <td style="border: 1px solid #000;">
-                No establecer linderos, hitos u otras señales en los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03)
+                No registrar la información en el Libro de Operaciones de acuerdo a las disposiciones establecidas
             </td>
             <td style="border: 1px solid #000; text-align: center;">
                 Escrito xxxxxxx SITD xxxxxxxxx
@@ -33,7 +33,7 @@
 
 {{if informe.COD_TIPO_INFORME == 1}}
 <p class="enumeration">
-    Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° xxxxxxxxxx de fecha xx de xxxxx de 202X, ingresado con fecha xx de xxxx de 202X (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
+    Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° xxxxxxxxxx de fecha xx de xxxxx de 2023, ingresado con fecha xx de xxxx de 2023 (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
 </p>
 <ol style="list-style-type: lower-alpha">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
@@ -49,21 +49,21 @@
     </li>
 </ul>
 <p class="enumeration">
-    Mediante Escrito S/N de fecha XX de XX de 20XX con Registro XX, el/la administrado presentó sus descargos al informe final de instrucción, donde se advierte los siguientes argumentos:
+    Al respecto, mediante escrito N° xxx con SITD N° xxxxxxx de fecha xx de xxxx de xxxx, el/la administrado (a) presentó su descargo al Informe Final de Instrucción, señalando lo siguiente:
 </p>
 <ol style="list-style-type: lower-alpha">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
 </ol>
-<p class="enumeration">Respecto a lo señalado por el titular, se advierte el siguiente análisis:</p>
+<p class="enumeration">Respecto a lo señalado por el/la administrado (a); se advierte el siguiente análisis:</p>
 <ul>
     <li>Con relación al argumento señalado en el acápite a) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite b) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite c) xxxxxxxxxxxxxxxxxxx</li>
 </ul>
 <p class="enumeration">
-    Al respecto, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
 {{else}}
 <p class="enumeration">
@@ -78,22 +78,19 @@
 {{/if}}
 <ul>
     <li>
-        Conforme al contenido Informe de Supervisión, su numeral xxx, cuadro N° xx, se advierte que, el/la administrado (a) no ha cumplido con la señalización de los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03), igualmente, con el linderamiento de las Parcelas de Corta”, afirmación que guarda concordancia con la siguiente imagen fotográfica tomada durante la supervisión:
-    </li>
-</ul>
-<p style="text-align: center;"><strong>Adjuntar imagen</strong></p>
-<ul>
-    <li>
-        Ahora bien, la mencionada obligación no solo se encuentra establecida en el literal xx del numeral <strong>xxxx del artículo xxx del RGF y/o RGFFSCNCC</strong>, además se encuentra establecida en el numeral xx del <strong>PO/PMF</strong>, donde se señala que, en el área de producción maderable se realizará entre otras actividades, la señalización de vértices y el linderamiento del área a manejar, lo cual incluiría las PC 01, 02 y 03.
+        Mediante el Oficio N° xx- (Registro N° xx) de fecha xx, la ARFFS señaló que el código de Libro de Operaciones otorgado al título habilitante del/la administrado (a) es: xxx.
     </li>
     <li>
-        En efecto, el/la administrado (a) no ha cumplido con establecer linderos, hitos u otras señales en los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03); tampoco ha realizado el linderamiento de las Parcelas de Corta xx.
+        Revisado el Libro de operaciones, se aprecia que, <strong>no presenta el registro en las secciones tala, trozado, xx, los siguientes árboles: xxx</strong>
     </li>
     <li>
-        El RISMFFS permite que la infracción analizada se subsane, incluso hasta el vencimiento del plazo previsto para la presentación de los descargos en la fase instructora; siendo que, el/la administrado (a) no cumplió con establecer linderos u otras señales.
+        En efecto, existen evidencias de que el Libro de Operaciones no se encuentra actualizado, por ende, <strong>no registra información de acuerdo a las disposiciones establecidas en el SERFOR.</strong>
+    </li>
+    <li>
+        A pesar de que el RISMFFS señala que la infracción analizada es subsanable, la misma que se efectúa dentro del plazo previsto para la presentación de los descargos en la fase instructora; el/la administrado (a) no cumplió con remitir el Libro de Operaciones con la información registrada de acuerdo a las disposiciones legalmente establecidas.
     </li>
 </ul>
 
 <p class="enumeration">
-    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 1 del Anexo 1 del RISMFFS; <u>criterio acorde a lo señalado en el Informe Final de Instrucción.</u>
+    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 11 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
 </p>
