Correcciones en descarga de archivo

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/_tmplRDInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/_tmplRDInforme.cshtml
@@ -475,7 +475,7 @@
     <p class="enumeration">
         Los titulares, tienen la obligación de cumplir con la implementación de las medidas correctivas y/o mandatos que se emitan como resultado de las acciones de control, supervisión y/o fiscalización ejecutadas por el OSINFOR; y conforme a lo regulado por el numeral 14 del Anexo 2 del RISMFFS, el incumplir con la implementación de las medidas correctivas, constituye una infracción grave; debiendo informarse que la supervisión de la implementación de la medida, se encuentra a cargo de la Dirección de Supervisión Forestal y de Fauna Silvestre del OSINFOR.
     </p>
-    {{/else}}
+    {{else}}
     <p class="enumeration">
         La medida correctiva a aplicarse en el presente caso, por la extracción de un volumen de <strong>xxx m<sup>3</sup></strong>, será de xxx, toda vez que existe un área disponible dentro de la concesión para realizar la reposición de la cobertura afectada mediante manejo de regeneración natural. <u>La propuesta de medida correctiva se detalla en el anexo 2 de la presente resolución</u>.
     </p>
@@ -557,7 +557,6 @@
     </p>
     {{/if}}
 
-    {{/if}}
     <p style="text-indent: 30px;">
         <strong>Artículo.</strong> Declarar la caducidad del derecho de aprovechamiento contenido en el Permiso xxx, otorgado a xxxx, identificada con DNI/ RUC N° xxxx, por haber incurrido en la causal de caducidad prevista en el literal x) del artículo 153 de la Ley Forestal y de Fauna Silvestre, Ley N° 29763, concordado con el literal x) del artículo xx del Reglamento xxx, aprobado por Decreto Supremo N° xx-2015-MINAGRI; y con el numeral xxx de la Cláusula xxxx del Contrato de Concesión, conforme a lo señalado en la parte considerativa de la presente Resolución Directoral.
     </p>
